@@ -22,7 +22,10 @@
 *****	is now "default", under the root installation directory. In the previous release, it was
 *****	share/sympa/default. You should remove this directory now to avoid confusion.
 
-	New configure option: '--enable-fhs'. Sympa supports two kinds of files hierarchies. The historical one, where by default all is gathered in the Sympa directry, and also the FHS recommended hierarchy. Now if the '--enable-fhs' configure option is set, Sympa is installed according to the FHS. Otherwise, it is installed using the historical paths.
+*****	New configure option: '--enable-fhs'. Sympa supports two kinds of files hierarchies. 
+*****	The historical one, where by default all is gathered in the Sympa directry, and also the FHS 
+*****	recommended hierarchy. Now if the '--enable-fhs' configure option is set, Sympa is installed 
+*****	according to the FHS. Otherwise, it is installed using the historical paths.
 
  Bug fixes:
 
